--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -492,7 +492,8 @@ Blocks Styles
 				cursor: pointer;
 }
 .home .editor-styles-wrapper .acf-block-preview .header .site-menu__first-level:hover {
-				opacity: 0.6;
+				opacity: 0.8;
+				color: #FB3BA5;
 }
 @media only screen and (min-width: 1050px) {
 				.home .editor-styles-wrapper .acf-block-preview .header .site-menu .site-menu__item.hover .site-menu__first-level {
@@ -776,6 +777,11 @@ Blocks Styles
 				    -ms-flex-align: start;
 				        align-items: flex-start;
 				aspect-ratio: 16/9;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(0));
+				        transform: var(--fade-transform, translateX(0) translateY(0));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				/*  &::after {
 				    content: '';
 				    width: 100%;
@@ -2113,6 +2119,13 @@ Blocks Styles
 				padding-bottom: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
 				position: relative;
 }
+.editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__cont {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question {
 				color: #FB3BA5;
 				font-size: clamp(22px, 13px + 0.015 * 100vw, 30px);
@@ -2200,6 +2213,11 @@ Blocks Styles
 				position: relative;
 				padding-bottom: clamp(60px, 5.4px + 0.091 * 100vw, 110px);
 }
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .image-text {
+								background-color: #3ACBED;
+				}
+}
 .editor-styles-wrapper .acf-block-preview .image-text::after {
 				content: "";
 				background-color: #3ACBED;
@@ -2216,6 +2234,14 @@ Blocks Styles
 				-webkit-box-align: center;
 				    -ms-flex-align: center;
 				        align-items: center;
+}
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .image-text__cont {
+								-webkit-box-orient: vertical;
+								-webkit-box-direction: normal;
+								    -ms-flex-direction: column;
+								        flex-direction: column;
+				}
 }
 .editor-styles-wrapper .acf-block-preview .image-text__content {
 				display: -webkit-box;
@@ -2244,10 +2270,30 @@ Blocks Styles
 				top: 0;
 				left: 0;
 				max-width: 220px;
+				z-index: 1;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(-100px) translateY(0));
+				        transform: var(--fade-transform, translateX(-100px) translateY(0));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.8s;
+				        transition-delay: 0.8s;
+}
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .image-text__image__logo {
+								max-width: 120px;
+				}
 }
 .editor-styles-wrapper .acf-block-preview .image-text__image__logo img {
 				width: auto;
 				height: auto;
+}
+.editor-styles-wrapper .acf-block-preview .image-text__image__mobile {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .editor-styles-wrapper .acf-block-preview .image-text__buttons {
 				display: -webkit-box;
@@ -2257,6 +2303,13 @@ Blocks Styles
 				    -ms-flex-align: center;
 				        align-items: center;
 				gap: 20px;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.6s;
+				        transition-delay: 0.6s;
 }
 .editor-styles-wrapper .acf-block-preview .image-text__buttons a,
 .editor-styles-wrapper .acf-block-preview .image-text__buttons img {
@@ -2270,9 +2323,16 @@ Blocks Styles
 				font-weight: 400;
 				font-family: "Bebas Neue", sans-serif;
 				color: #ffffff;
-				margin-top: 70px;
+				margin-top: 80px;
 				line-height: 1;
 				max-width: 480px;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.2s;
+				        transition-delay: 0.2s;
 }
 @media only screen and (max-width: 1680px) {
 				.editor-styles-wrapper .acf-block-preview .image-text__title {
@@ -2285,6 +2345,13 @@ Blocks Styles
 				font-style: italic;
 				line-height: 1.4;
 				color: #231F20;
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(0) translateY(100px));
+				        transform: var(--fade-transform, translateX(0) translateY(100px));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				-webkit-transition-delay: 0.4s;
+				        transition-delay: 0.4s;
 }
 .editor-styles-wrapper .acf-block-preview .number_grid {
 				padding-top: clamp(60px, 16.2px + 0.073 * 100vw, 100px);
@@ -2313,16 +2380,16 @@ Blocks Styles
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont {
 								-ms-grid-columns: 1fr;
 								grid-template-columns: repeat(1, 1fr);
-								gap: 45px;
+								gap: 40px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
-				font-size: clamp(60px, -181.2px + 0.402 * 100vw, 281px);
+				font-size: clamp(60px, -93px + 0.255 * 100vw, 200px);
 				font-weight: 500;
 				line-height: 1;
 				color: #231F20;
 				font-family: "Druk-Medium";
-				max-height: 240px;
+				max-height: 180px;
 				/*  @include responsive('tablet-v') {
 				    max-height: inherit;
 				} */
@@ -2334,7 +2401,7 @@ Blocks Styles
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
-				font-size: clamp(25px, -35px + 0.1 * 100vw, 80px);
+				font-size: clamp(25px, -18.8px + 0.073 * 100vw, 65px);
 				font-weight: 500;
 				color: #ffffff;
 				font-family: "Druk-Medium";
@@ -2358,6 +2425,11 @@ Blocks Styles
 				        flex-direction: column;
 				gap: 40px;
 				min-height: 505px;
+}
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .number_grid__item {
+								gap: 20px;
+				}
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__item {
@@ -2418,7 +2490,7 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__link {
 				padding-top: 40px;
-				font-size: clamp(24px, -15px + 0.065 * 100vw, 60px);
+				font-size: clamp(24px, 6.6px + 0.029 * 100vw, 40px);
 				font-style: italic;
 				font-weight: 400;
 				color: #ffffff;
@@ -2457,13 +2529,20 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .slider-links {
 				padding-top: clamp(84px, 84px + 0 * 100vw, 84px);
-				padding-bottom: clamp(84px, -21.6px + 0.176 * 100vw, 181px);
+				padding-bottom: clamp(84px, 84px + 0 * 100vw, 84px);
 				position: relative;
 				overflow: hidden;
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .anchor {
 				position: absolute;
 				top: -84px;
+}
+.editor-styles-wrapper .acf-block-preview .slider-links .container {
+				opacity: var(--fade-opacity, 0);
+				-webkit-transform: var(--fade-transform, translateX(100px) translateY(0));
+				        transform: var(--fade-transform, translateX(100px) translateY(0));
+				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont {
 				position: relative;
