--- a/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_number-grid.scss
@@ -15,16 +15,16 @@
 
         @include responsive('tablet-v') {
             grid-template-columns: repeat(1, 1fr);
-            gap: 45px;
+            gap: 40px;
         }
 
         .number {
-            font-size: rv(60px, 281px);
+            font-size: rv(60px, 200px);
             font-weight: 500;
             line-height: 1;
             color: $light-black;
             font-family: $druk;
-            max-height: 240px;
+            max-height: 180px;
 
             @include responsive('desktop-l') {
                 font-size: 200px;
@@ -38,7 +38,7 @@
         }
 
         .number_text {
-            font-size: rv(25px, 80px);
+            font-size: rv(25px, 65px);
             font-weight: 500;
             color: $white;
             font-family: $druk;
@@ -61,6 +61,10 @@
         gap: 40px;
         //@include fade(0, 100px, true, 0);
         min-height: 505px;
+
+        @include responsive('mobile-h') {
+            gap: 20px;
+        }
 
         @include responsive('desktop-l') {
             min-height: auto;
@@ -99,7 +103,7 @@
 
     &__link {
         padding-top: 40px;
-        font-size: rv(24px, 60px);
+        font-size: rv(24px, 40px);
         font-style: italic;
         font-weight: 400;
         color: $white;
