--- a/wp-content/themes/gtoken/scss/layout/_footer.scss
+++ b/wp-content/themes/gtoken/scss/layout/_footer.scss
@@ -83,6 +83,10 @@
 					margin-right: 0;
 				}
 
+				@include responsive('desktop-m') {
+					font-size: 18px;
+				}
+
 				a {
 					color: $white;
 					text-decoration: none;
