--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -398,6 +398,7 @@ Blocks Styles
 				-webkit-box-shadow: #333 0 0 10px;
 				        box-shadow: #333 0 0 10px;
 				z-index: 1000;
+				text-decoration: none;
 }
 .editor-styles-wrapper .acf-block-preview .error404 .header .site-menu__first-level {
 				color: #000;
@@ -863,6 +864,7 @@ Blocks Styles
 @media only screen and (max-width: 768px) {
 				.editor-styles-wrapper .acf-block-preview .hero--home .hero__text .title {
 								font-size: 60px;
+								letter-spacing: 10px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .hero--home .hero__text p {
@@ -1167,6 +1169,14 @@ Blocks Styles
 				.editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .content__link {
 								margin-bottom: 20px;
 								margin-right: 0;
+				}
+}
+@media only screen and (max-width: 1260px) {
+				.editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .copyright,
+				.editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .direccion,
+				.editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .email,
+				.editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .content__link {
+								font-size: 18px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .site-footer__logo-column__two .copyright a,
@@ -2115,8 +2125,8 @@ Blocks Styles
 				}
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs {
-				padding-top: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
-				padding-bottom: clamp(60px, -10.8px + 0.118 * 100vw, 125px);
+				padding-top: clamp(20px, -94.6px + 0.191 * 100vw, 125px);
+				padding-bottom: clamp(20px, -94.6px + 0.191 * 100vw, 125px);
 				position: relative;
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__cont {
@@ -2128,7 +2138,7 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .accordion--faqs .accordion__question {
 				color: #FB3BA5;
-				font-size: clamp(22px, 13px + 0.015 * 100vw, 30px);
+				font-size: clamp(19px, 7px + 0.02 * 100vw, 30px);
 				font-weight: 400;
 				line-height: 1;
 				font-style: italic;
@@ -2157,6 +2167,7 @@ Blocks Styles
 				display: inline-block;
 				width: 29px;
 				height: 29px;
+				aspect-ratio: 1;
 				-webkit-transition: all 0.3s ease;
 				transition: all 0.3s ease;
 }
@@ -2209,6 +2220,12 @@ Blocks Styles
 				width: 68%;
 				height: 14px;
 }
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .accordion--faqs::before {
+								width: 100%;
+								bottom: 99%;
+				}
+}
 .editor-styles-wrapper .acf-block-preview .image-text {
 				position: relative;
 				padding-bottom: clamp(60px, 5.4px + 0.091 * 100vw, 110px);
@@ -2216,6 +2233,13 @@ Blocks Styles
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .image-text {
 								background-color: #3ACBED;
+								margin-bottom: 200px;
+				}
+}
+@media only screen and (max-width: 1050px) {
+				.editor-styles-wrapper .acf-block-preview .image-text {
+								background-color: #3ACBED;
+								margin-bottom: 100px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .image-text::after {
@@ -2255,6 +2279,11 @@ Blocks Styles
 				width: 690px;
 				max-width: 100%;
 }
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .image-text__content {
+								width: 100%;
+				}
+}
 .editor-styles-wrapper .acf-block-preview .image-text__image {
 				position: relative;
 }
@@ -2264,6 +2293,11 @@ Blocks Styles
 				-o-object-fit: cover;
 				   object-fit: cover;
 				margin-top: 50px;
+}
+@media only screen and (max-width: 1050px) {
+				.editor-styles-wrapper .acf-block-preview .image-text__image img {
+								height: 76vw;
+				}
 }
 .editor-styles-wrapper .acf-block-preview .image-text__image__logo {
 				position: absolute;
@@ -2318,8 +2352,15 @@ Blocks Styles
 				-o-object-fit: cover;
 				   object-fit: cover;
 }
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .image-text__buttons a,
+				.editor-styles-wrapper .acf-block-preview .image-text__buttons img {
+								width: 150px;
+								height: auto;
+				}
+}
 .editor-styles-wrapper .acf-block-preview .image-text__title {
-				font-size: clamp(36px, -6.6px + 0.071 * 100vw, 75px);
+				font-size: clamp(45px, 12px + 0.055 * 100vw, 75px);
 				font-weight: 400;
 				font-family: "Bebas Neue", sans-serif;
 				color: #ffffff;
@@ -2334,9 +2375,20 @@ Blocks Styles
 				-webkit-transition-delay: 0.2s;
 				        transition-delay: 0.2s;
 }
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .image-text__title {
+								max-width: 100%;
+								margin-top: 0;
+				}
+}
 @media only screen and (max-width: 1680px) {
 				.editor-styles-wrapper .acf-block-preview .image-text__title {
 								font-size: 55px;
+				}
+}
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .image-text__title {
+								font-size: 45px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .image-text__text {
@@ -2390,14 +2442,17 @@ Blocks Styles
 				color: #231F20;
 				font-family: "Druk-Medium";
 				max-height: 180px;
-				/*  @include responsive('tablet-v') {
-				    max-height: inherit;
-				} */
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
 								font-size: 200px;
 								max-height: 180px;
+				}
+}
+@media only screen and (max-width: 768px) {
+				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
+								font-size: 140px;
+								max-height: 128px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
@@ -2412,6 +2467,12 @@ Blocks Styles
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
 								font-size: 60px;
+				}
+}
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
+								font-size: 45px;
+								max-width: 100%;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__item {
