--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -67,6 +67,7 @@
 
                 @include responsive('mobile-h') {
                     font-size: 60px;
+                    letter-spacing: 10px;
                 }
             }
 
