--- a/wp-content/themes/gtoken/scss/base/_typography.scss
+++ b/wp-content/themes/gtoken/scss/base/_typography.scss
@@ -3,7 +3,8 @@
 @font-face {
     font-family: 'Druk-Medium';
     src: url('./fonts/Druk-Medium.woff2') format('woff2'),
-        url('./fonts/Druk-Medium.woff') format('truetype')
+        url('./fonts/Druk-Medium.woff') format('truetype');
+    font-display: swap;
 }
 
 @font-face {
@@ -17,4 +18,5 @@
     url("@{base-url}/@{folder}/@{name}.svg#") format('svg');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
