--- a/wp-content/themes/gtoken/scss/blocks/_image-text.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_image-text.scss
@@ -3,12 +3,10 @@
     padding-bottom: rv(60px, 110px);
 
     @include responsive('desktop-l') {
-        background-color: $light-blue-color;
         margin-bottom: 200px;
     }
 
     @include responsive('tablet-h') {
-        background-color: $light-blue-color;
         margin-bottom: 100px;
     }
 
@@ -20,6 +18,14 @@
         z-index: -1;
         width: 100%;
         height: 456px;
+
+        @include responsive('mobile-v') {
+            top: 150px;
+            z-index: -1;
+            width: 100%;
+            height: 150px;
+
+        }
     }
 
 
@@ -74,8 +80,13 @@
             }
 
             img {
-                width: auto;
-                height: auto;
+                width: 220px;
+                height: 220x;
+
+                @include responsive('desktop-l') {
+                    width: auto;
+                    height: auto;
+                }
             }
         }
 
@@ -121,6 +132,7 @@
 
         @include responsive('desktop-xl') {
             font-size: 55px;
+            color: $black;
         }
 
         @include responsive('mobile-h') {
