--- a/wp-content/themes/gtoken/style.css
+++ b/wp-content/themes/gtoken/style.css
@@ -59,6 +59,7 @@ Se usa igual que fade, pero crea un loop para animar los elementos de forma orde
 @font-face {
 				font-family: "Druk-Medium";
 				src: url("./fonts/Druk-Medium.woff2") format("woff2"), url("./fonts/Druk-Medium.woff") format("truetype");
+				font-display: swap;
 }
 @font-face {
 				font-family: "Calluna";
@@ -68,6 +69,7 @@ Se usa igual que fade, pero crea un loop para animar los elementos de forma orde
 				src: url("@{base-url}/@{folder}/@{name}.eot?#iefix") format("embedded-opentype"), url("@{base-url}/@{folder}/@{name}.woff") format("woff"), url("@{base-url}/@{folder}/@{name}.ttf") format("truetype"), url("@{base-url}/@{folder}/@{name}.svg#") format("svg");
 				font-weight: normal;
 				font-style: normal;
+				font-display: swap;
 }
 html {
 				-webkit-box-sizing: border-box;
@@ -2155,8 +2157,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				display: inline-block;
 				margin-right: 15px;
 				display: inline-block;
-				width: 29px;
-				height: 29px;
+				width: 25px;
+				height: 25px;
 }
 @media only screen and (max-width: 768px) {
 				.text-papper .content__link::before {
@@ -2180,7 +2182,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 .accordion--faqs .accordion__question {
 				color: #FB3BA5;
-				font-size: clamp(19px, 7px + 0.02 * 100vw, 30px);
+				font-size: clamp(18px, 4.8px + 0.022 * 100vw, 30px);
 				font-weight: 400;
 				line-height: 1;
 				font-style: italic;
@@ -2207,8 +2209,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				content: "";
 				background: url(images/icons/arrow-select-pink.png) no-repeat center/contain;
 				display: inline-block;
-				width: 29px;
-				height: 29px;
+				width: 25px;
+				height: 25px;
 				aspect-ratio: 1;
 				-webkit-transition: all 0.3s ease;
 				transition: all 0.3s ease;
@@ -2275,13 +2277,11 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 }
 @media only screen and (max-width: 1500px) {
 				.image-text {
-								background-color: #3ACBED;
 								margin-bottom: 200px;
 				}
 }
 @media only screen and (max-width: 1050px) {
 				.image-text {
-								background-color: #3ACBED;
 								margin-bottom: 100px;
 				}
 }
@@ -2293,6 +2293,14 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				z-index: -1;
 				width: 100%;
 				height: 456px;
+}
+@media only screen and (max-width: 600px) {
+				.image-text::after {
+								top: 150px;
+								z-index: -1;
+								width: 100%;
+								height: 150px;
+				}
 }
 .image-text__cont {
 				display: -webkit-box;
@@ -2362,8 +2370,14 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				}
 }
 .image-text__image__logo img {
-				width: auto;
-				height: auto;
+				width: 220px;
+				height: 220x;
+}
+@media only screen and (max-width: 1500px) {
+				.image-text__image__logo img {
+								width: auto;
+								height: auto;
+				}
 }
 .image-text__image__mobile {
 				opacity: var(--fade-opacity, 0);
@@ -2427,6 +2441,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 @media only screen and (max-width: 1680px) {
 				.image-text__title {
 								font-size: 55px;
+								color: #000;
 				}
 }
 @media only screen and (max-width: 768px) {
@@ -2622,8 +2637,8 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader,
 				background: url(images/icons/arrow-select.png) no-repeat center/contain;
 				margin-right: 20px;
 				display: inline-block;
-				width: 29px;
-				height: 29px;
+				width: 25px;
+				height: 25px;
 }
 @media only screen and (max-width: 768px) {
 				.number_grid__link::before {
