--- a/wp-content/themes/gtoken/scss/blocks/_image-text.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_image-text.scss
@@ -81,7 +81,7 @@
 
             img {
                 width: 220px;
-                height: 220x;
+                height: 220px;
 
                 @include responsive('desktop-l') {
                     width: auto;
