--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -2328,7 +2328,7 @@ Blocks Styles
 }
 .editor-styles-wrapper .acf-block-preview .image-text__image__logo img {
 				width: 220px;
-				height: 220x;
+				height: 220px;
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .image-text__image__logo img {
