--- a/wp-content/themes/gtoken/editor.css
+++ b/wp-content/themes/gtoken/editor.css
@@ -855,7 +855,7 @@ Blocks Styles
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .hero--home .hero__text .title {
-								font-size: 190px;
+								font-size: 160px;
 				}
 }
 @media only screen and (max-width: 1050px) {
@@ -1939,6 +1939,11 @@ Blocks Styles
 				    -ms-flex-align: start;
 				        align-items: flex-start;
 }
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .text-papper .content {
+								gap: 40px;
+				}
+}
 @media only screen and (max-width: 1050px) {
 				.editor-styles-wrapper .acf-block-preview .text-papper .content {
 								-webkit-box-orient: vertical;
@@ -1968,10 +1973,12 @@ Blocks Styles
 				-webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 				transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .text-papper .content__text .title {
 								font-size: 60px;
 				}
+}
+@media only screen and (max-width: 900px) {
 				.editor-styles-wrapper .acf-block-preview .text-papper .content__text .title br {
 								display: none;
 				}
@@ -1988,7 +1995,7 @@ Blocks Styles
 				font-weight: 300;
 				line-height: 1;
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .text-papper .content__text .title span {
 								font-size: 70px;
 				}
@@ -2439,15 +2446,19 @@ Blocks Styles
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont {
+								gap: 40px;
+				}
+}
+@media only screen and (max-width: 1260px) {
+				.editor-styles-wrapper .acf-block-preview .number_grid__cont {
 								-ms-grid-columns: (1fr)[2];
 								grid-template-columns: repeat(2, 1fr);
 				}
 }
 @media only screen and (max-width: 900px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont {
-								-ms-grid-columns: 1fr;
+								-ms-grid-columns: (1fr)[1];
 								grid-template-columns: repeat(1, 1fr);
-								gap: 40px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
@@ -2460,14 +2471,8 @@ Blocks Styles
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
-								font-size: 200px;
-								max-height: 180px;
-				}
-}
-@media only screen and (max-width: 768px) {
-				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number {
-								font-size: 140px;
-								max-height: 128px;
+								font-size: 120px;
+								max-height: 105px;
 				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
@@ -2481,7 +2486,7 @@ Blocks Styles
 }
 @media only screen and (max-width: 1500px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__cont .number_text {
-								font-size: 60px;
+								font-size: 55px;
 				}
 }
 @media only screen and (max-width: 1500px) {
@@ -2502,12 +2507,17 @@ Blocks Styles
 				gap: 40px;
 				min-height: 505px;
 }
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .number_grid__item {
+								min-height: 305px;
+				}
+}
 @media only screen and (max-width: 768px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__item {
 								gap: 20px;
 				}
 }
-@media only screen and (max-width: 1500px) {
+@media only screen and (max-width: 1260px) {
 				.editor-styles-wrapper .acf-block-preview .number_grid__item {
 								min-height: auto;
 				}
@@ -2563,6 +2573,11 @@ Blocks Styles
 				font-size: clamp(18px, 11.4px + 0.011 * 100vw, 24px);
 				font-style: italic;
 				line-height: 1.4;
+}
+@media only screen and (max-width: 1500px) {
+				.editor-styles-wrapper .acf-block-preview .number_grid__item .number_content {
+								font-size: 18px;
+				}
 }
 .editor-styles-wrapper .acf-block-preview .number_grid__link {
 				padding-top: 40px;
@@ -2746,31 +2761,6 @@ Blocks Styles
 								gap: 0;
 								margin-bottom: 0;
 				}
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination {
-				width: 100%;
-				margin: 0 auto;
-				height: 50px;
-				display: inline;
-				display: none;
-}
-@media only screen and (max-width: 768px) {
-				.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination {
-								display: none;
-				}
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination .swiper-pagination-bullet {
-				width: 10px;
-				height: 10px;
-				margin: 0 15px;
-				display: inline-block;
-				cursor: pointer;
-				vertical-align: middle;
-				background-color: #DFEDF3;
-				border-radius: 10px;
-}
-.editor-styles-wrapper .acf-block-preview .slider-links .swiper-cont .swiper.slider-partners .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-				background-color: #54A8C7;
 }
 .editor-styles-wrapper .acf-block-preview .error-404 {
 				padding-top: clamp(170px, 21.8px + 0.247 * 100vw, 306px);
