--- a/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
+++ b/wp-content/themes/gtoken/scss/blocks/_text-papper.scss
@@ -10,6 +10,10 @@
         justify-content: center;
         align-items: flex-start;
 
+        @include responsive('desktop-l') {
+            gap: 40px;
+        }
+
         @include responsive('tablet-h') {
             flex-direction: column;
             align-items: flex-start;
@@ -32,8 +36,11 @@
 
                 @include fade(0, 100px, true, 0);
 
-                @include responsive('tablet-v') {
+                @include responsive('desktop-l') {
                     font-size: 60px;
+                }
+
+                @include responsive('tablet-v') {
 
                     br {
                         display: none;
@@ -52,7 +59,7 @@
                     font-weight: 300;
                     line-height: 1;
 
-                    @include responsive('tablet-v') {
+                    @include responsive('desktop-l') {
                         font-size: 70px;
                     }
 
