--- a/wp-content/themes/gtoken/scss/hero/_home.scss
+++ b/wp-content/themes/gtoken/scss/hero/_home.scss
@@ -50,12 +50,13 @@
             .title {
                 color: $white;
                 font-family: $druk;
-                font-size: rv(60px, 200px);
+                font-size: rv(60px, 350px);
                 line-height: 1;
                 font-weight: 500;
                 //text-transform: uppercase;
+                width: 900px;
+                max-width: 100%;
                 @include fade(-100px, 0, true, 0);
-                letter-spacing: 20px;
 
                 @include responsive('desktop-l') {
                     font-size: 160px;
